<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.update.UpdateFragment"
        android:background="@color/green2">

        <androidx.cardview.widget.CardView
            android:id="@+id/updateObservationCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/updateObservation"
                    android:textColor="#363A43"
                    android:textSize="26sp"
                    android:textStyle="bold"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/updateEtTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/updateObservationTitle"
                        android:textColor="#363A43"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/updateEtDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/updateObservationDate"
                        android:textColor="#363A43"
                        android:inputType="text"
                        android:focusable="false"
                        android:focusableInTouchMode="false"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/updateEtLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/updateObservationLocation"
                        android:textColor="#363A43"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/updateEtNotes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/updateObservationNotes"
                        android:inputType="textMultiLine"
                        android:gravity="start|top" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/updateBtn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/updateBtnUpdateObservation"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:backgroundTint="@color/green1"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>
</ScrollView>